# sunburst

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  example_hpie.py  example_paths.py  hpie.py  icon.py  path.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  test-release.yaml  test.yaml
doc/: .gitignore  Makefile  changelog.md  conf.py  hpie.rst  index.rst  license.rst  make.bat  path.rst  plot.rst  readme.rst  requirements.txt
doc/_templates/: globaltoc.html
examples/: .gitignore  __init__.py  disk_usage.sh  disk_usage_example_exploded.py  disk_usage_example_plot.py  disk_usage_exploded.py  disk_usage_plot.py  example_file_sizes.py  example_hpie.py  example_paths.py  file_sizes.sh  icon.py  minimal_example_exploded.py  minimal_example_hpie.py  minimal_example_ordered.py  minimal_example_rings.py  minimal_example_sunburst.py  random_hdata.py  random_hdtata.py  setup_path.sh
examples/pretty/: pretty_disk_usage_plot.py  pretty_minimal_example_hpie.py  pretty_minimal_example_rings.py
examples/tests/: __init__.py  test_disk_usage.py  test_disk_usage_exploded.py  test_minimal_example_exploded.py  test_minimal_example_hpie.py  test_minimal_example_ordered.py  test_minimal_example_rings.py  test_minimal_example_sunburst.py
experiments/: before_after.py  measuring.py
hooks/: check_examples.sh  pre-commit  setup.sh
hpie/: __init__.py  calc.py  hpie.py  path.py
sunburst/: __init__.py  calc.py  path.py  plot.py
(+9 files in other folders)
