# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = sunburst
description = Use matplotlib to plot sunburst charts/hierarchical pie charts/ring charts/multilevel pie charts (as e.g. in disk usage diagrams).
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
url = https://github.com/klieret/sunburst
version = file: sunburst/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE.txt
python_requires = >=3.6
project_urls =
    Bug Tracker =   https://github.com/klieret/sunburst/issues
    Documentation = https://sunburst.readthedocs.io/
    Source Code =   https://github.com/klieret/sunburst/
keywords =
    plot
    matplotlib
    pyplot
    sunburst
    pie chart
    multilevel pie chart
    disk usage diagram
    ring chart
    hierarchical pie chart
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    matplotlib
    typing
    pytest
